alignment issue

--- a/client/src/components/ClientStats/ClientStats.styles.css
+++ b/client/src/components/ClientStats/ClientStats.styles.css
@@ -7,13 +7,13 @@
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-around;
 }
 
 .stats-item {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 33%;
 }
 
 .head {
